CHAT-88 ensure the typing input is visible wihtout scrolling

--- a/frontend/css/partial/channel-view.less
+++ b/frontend/css/partial/channel-view.less
@@ -51,7 +51,7 @@
     .listview.lv-message {
       .flex-column;
 
-      height: ~"calc(100vh - 115px)";
+      height: ~"calc(100vh - 200px)";
     }
 
     .lv-body {
@@ -65,6 +65,6 @@
 
 @media (min-width: @screen-sm-min) {
   #messages-main .card .listview.lv-message {
-    height: ~"calc(100vh - 185px)";
+    height: ~"calc(100vh - 255px)";
   }
 }
